# ml_primeiro_dia

./: .gitignore  README.md  pyproject.toml
api_model_ml/: exemplo_00_func.py  exemplo_01_api.py  modelo_casas.pkl
